v0.14.0 / Added opacity switch for videos to reduce the transition flickering / removed portfolio button scale on hover to prevent the onMouse event to trigger multiple times / changed logic order to improve animation

--- a/src/components/styles/VideoContainersStack.css
+++ b/src/components/styles/VideoContainersStack.css
@@ -114,7 +114,7 @@
 }
 
 .portfolio_button:hover {
-  transform: translate(-50%, -5%) scale(1.1);
+  /* transform: translate(-50%, -5%) scale(1.1); */
   transition: transform 0.5s ease-in-out;
 }
 
@@ -152,12 +152,15 @@ video {
 
 #video_forward {
   z-index: 30;
+  opacity: 1;
 }
 #video_reverse {
   z-index: 20;
+  opacity: 1;
 }
 #video_zoom {
   z-index: 10;
+  opacity: 1;
 }
 
 /* ↓ Portfolio page ↓ */
